<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="24dp"
    android:paddingRight="24dp"

    tools:context=".InformacoesVotacaoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblIdade" />

    <EditText
        android:id="@+id/et_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genero" />

    <RadioGroup
        android:id="@+id/rg_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino">

        </RadioButton>

        <RadioButton
            android:id="@+id/rb_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/feminino">

        </RadioButton>

    </RadioGroup>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolaridade" />
    <Spinner
        android:id="@+id/spEscolaridade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/casaPropria" />

    <RadioGroup
        android:id="@+id/rg_casapropria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_casapropria_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casapropria_sim">

        </RadioButton>

        <RadioButton
            android:id="@+id/rb_casapropria_nao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/casapropria_nao">

        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/bt_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/lblConfirmar" />


</LinearLayout>