<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="24dp"
    android:paddingRight="24dp"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblcandidatos" />


    <RadioGroup
        android:id="@+id/rg_candidatos"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_Jose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/radioJose"></RadioButton>

        <RadioButton
            android:id="@+id/rb_Luiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/radioLuiz">

        </RadioButton>

        <RadioButton
            android:id="@+id/rb_Maria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/radioMaria">

        </RadioButton>

        <RadioButton
            android:id="@+id/rb_Joao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/radioJoao">

        </RadioButton>

        <RadioButton
            android:id="@+id/rb_Branco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/radioBranco">

        </RadioButton>

        <RadioButton
            android:id="@+id/rb_Nulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/radioNulo">

        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/bt_votar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/lblvotar" />


</LinearLayout>